# wai_data_tools

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  Pipfile  README.md  README.rst  SUMMARY.md  classify_image.py  convert_to_upload_format.py  ei_image_classification.py  manual_labeling.py  movie_to_images.py  pyproject.toml  read_excel.py  requirements.txt  setup.cfg  setup.py  setup_logging.py  temporal_encoding.py  tox.ini
.github/workflows/: ci.yml  codeql-analysis.yml  run_tox.yml
configs/: config.yaml  config.yml  default_logging_config.conf
deploy-guides/edge-impulse-to-openmv/: README.md  ei_image_classification.py  openmv_image_classification_example.py
deploy-guides/to-imax/: README.md  quantize_wildlife.sh  wildlife-network-config.yaml  wildlifeai.py  wildlifeai_dataloader.py
deploy-guides/to-maxim/: evaluate_wildlife.sh  gen_wildlife_max78000.sh  train_wildlife.sh
docs/: conf.py  index.rst
maxim_datasets/: wildlifeai.py
notebooks/: README.md  cvat_annotation_wildlife_ai.py  kupe_skink.ipynb  wildlifeai_cli_demo.ipynb  wildlifeai_cli_demo.py  wildlifeai_cli_demo_extended.py  wildlifeai_demo.ipynb
scripts/: convert_to_label_based_data_structure.py  convert_to_upload_format.py  create_edge_impulse_dataset.py  create_frame_image_dataset.py  create_label_based_data_structure.py  manually_reclassify_frames.py  preprocess_images.py  split_videos_to_frame_images.py
src/: __init__.py  convert_to_upload_format.py  manual_labeling.py  movie_to_images.py  setup_logging.py  temporal_encoding.py
src/wai_data_tools/: __init__.py  actions.py  classify_image.py  cli.py  config.py  convert_to_upload_format.py  data.py  dataset_handling.py  file_handling.py  io.py  label_based_file_structure.py  manual_labeling.py  movie_to_images.py  preprocessing.py  read_excel.py  setup_logging.py  skeleton.py  temporal_encoding.py
src/wai_data_tools/configs/: __init__.py  default_config.py  default_config.yml
src/wai_data_tools/defaults/: default_config.py
src/wai_data_tools/manual_annotation/: controller.py  model.py  view.py
src/wai_data_tools/scripts/: cli.py  convert_to_upload_format.py  create_edge_impulse_dataset.py  create_frame_image_dataset.py  create_label_based_data_structure.py  dataset_handling.py  filter_empty_videos.py  manually_reclassify_frames.py  preprocess_images.py
src/wai_data_tools/utils/: data.py  video_filtering.py
tests/: conftest.py  test_config.py  test_config.yml  test_data.py  test_file_handling.py  test_filter_empty_videos.py  test_io.py  test_movie_to_images.py  test_preprocessing.py  test_read_excel.py  test_skeleton.py
tests/scripts/: test_filter_empty_videos.py
ww_data_example/: datapackage.json  deployments.csv  media.csv  observations.csv
