[tool.poetry]
name = "wai_data_tools"
version = "1.0.0"
description = "Package with logic for WDP project"
authors = ["David Andersson"]
readme = "README.rst"

[tool.poetry.group.dev]
optional = true

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
setuptools = "^46.1"
pandas = "^1.5.3"
opencv-python = "^4.7.0.72"
kaleido = "0.2.1"
fiftyone = "^0.19.1"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"
pytest = "^7.2.1"
pre-commit = "^3.1.1"
p2j = "^1.3.2"
pytest-cov = "^4.0.0"

[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# See configuration details in https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = "duplicate-code, too-many-instance-attributes, too-many-arguments, too-many-locals, consider-using-f-string, unspecified-encoding"
