[tool.poetry]
name = "wai_data_tools"
version = "1.0.0"
description = "Helpful tools for data handling for the Weta Watcher project at Wildlife AI"
authors = ["David Andersson"]
readme = "README.rst"

[tool.poetry.group.dev]
optional = true

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.64.1"
openpyxl = "^3.1.1"
toml = "^0.10.2"
click = "^8.1.6"
pandas = "^2.0.3"
opencv-python = "^4.8.0.74"
kaleido = "0.2.1"
boto3 = "1.28.7"
fiftyone = "^0.21.0"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
# pytest = "^7.2.1"
# pre-commit = "^3.1.1"
# pytest-cov = "^4.0.0"
# notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = "duplicate-code, too-many-instance-attributes, too-many-arguments, too-many-locals, consider-using-f-string, unspecified-encoding, consider-using-generator"

[tool.poetry.scripts]
wildlifeai-cli = 'wai_data_tools.cli:cli'

[tool.pydocstyle]
ignore = "D104"
